# nustar_lunar_pointing

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
data/: NuSTAR.tle
notebooks/: Drift Check.ipynb  Drift_20170508_unocculted.ipynb  Drift_20170508to20170510.ipynb  Lunar_Close_Calls.ipynb  Planning_Example.ipynb  SkyfieldTest.ipynb  SkyfieldTest_SolarParallax.ipynb  TLE_testing.ipynb
nustar_lunar_pointing/: __init__.py  orbit.py  tracking.py
