[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = nustar_lunar_pointing
description = NuSTAR code for converting data to sunpy compatible formats
long_description = This relies on astropy.
author = Brian Grefenstette
author_email = bwgref@srl.caltech.edu
license = MIT
url = https://github.com/nustar/nustar_lunar_pointing
edit_on_github = False
github_project = NuSTAR/nustar_lunar_pointing

#[entry_points]
#astropy-package-template-example = packagename.example_mod:main